# untitled_web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
k8/: deploy.yaml  service.yaml
src/: lib.rs  main.rs  routes.rs
src/auth/: login.rs  mod.rs  sign_up.rs
src/index/: mod.rs  popular.rs
src/projects/: create_event.rs  create_project.rs  get_project_by_id.rs  mod.rs
src/projects/axum/extractors/: message_queue.rs
src/projects/message_queue/: mod.rs
src/projects/message_queue/message/: error.rs  mod.rs  project_viewed.rs
src/projects/source_requests/: approve.rs  complete.rs  create.rs  create_comment.rs  create_source_request.rs  get_by_id.rs  get_source_request_by_id.rs  list.rs  list_source_requests.rs  mod.rs
src/projects/source_requests/comments/: create.rs  mod.rs
src/projects/tags/: create_tag.rs  delete_tag.rs  mod.rs
src/projects/threads/: create_thread.rs  get_thread_by_id.rs  list_threads.rs  mod.rs
src/users/: get_user_by_id.rs  get_user_by_username.rs  mod.rs
src/users/axum/extractors/: message_queue.rs
src/users/message_queue/: mod.rs
src/users/message_queue/message/: error.rs  mod.rs  user_viewed.rs
