[package]
name = "web_bff"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-layer = "0.3.3"
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["protobuf"] }
prost = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.20"
env_logger = "0.11.3"
async-channel = "2.3.1"
auth_client = { git = "https://github.com/chasb96/untitled_auth_client", default-features = false }
projects_client = { git = "https://github.com/chasb96/untitled_projects_client", tag = "v0.9.2", default-features = false }
users_client = { git = "https://github.com/chasb96/untitled_users_client", tag = "v0.2.0", default-features = false }
metrics_client = { git = "https://github.com/chasb96/untitled_metrics_client", tag = "v0.1.0", default-features = false }